# OwnBot

./: .gitignore  .pre-commit-config.yaml  PID.json  bot.db  config.py  enums.py  insight_face_tst.py  line_counter.py  logger_config.py  main.py  own_bot_exceptions.py  ownbot.db  progress_tracker.db  pyproject.toml  readme.md  requirements.txt  restart_PID.py  ruff.toml  sender.json  start_recognition.bat  startbot.sh  statistics.txt  stream_url.txt
calculate_methods/: default_values_based.py  description_based.py  pdf_based.py  quantity_based.py
classes/: indicator.py  indicator_param.py  report.py  schedule_task.py  todoist_task.py  user.py
db/: database.py  models.py
db/db_utils/: indicator_db_utils.py  report_db_utils.py  scheduler_db_utils.py  todoist_task_db_utils.py  user_db_utils.py
docs/Termux/: Install older python version for Termux.md  Termux.md  add git to Termux.md  bash script startapp in Termux.md  copy script inside Termux.md
global_settings/: description_based.py  indicators.json  mail_sender_config.py  report_config.py
handlers/: __init__.py  base_commands.py  file_handlers.py  handler_utils.py  schedule_handlers.py  user_commands.py
logs/: log.json
middlewares/: middlewares.py
migration/: env.py
settings/: description_based.py  indicators.json  mail_sender_config.py  report_config.py  timezones.py
todoist_api/: _rest_api_todoist.py  todoist_data.py
utils/: combined_charts.html  common_utils.py  handlers_utils.py  old_db_migration.py  report_utils.py
xlsx/: 08 декабря 2024 - 08 декабря 2024.xlsx
(+26 files in other folders)
