[project]
name = "ownbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.15.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.10.11",
    "aiosignal==1.3.2",
    "aiosmtplib==3.0.2",
    "aiosqlite==0.20.0",
    "albumentations>=2.0.6",
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "apscheduler==3.11.0",
    "attrs==24.3.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "et-xmlfile==2.0.0",
    "frozenlist==1.5.0",
    "greenlet==3.1.1",
    "httpx>=0.28.1",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "loguru==0.7.3",
    "magic-filter==1.0.12",
    "mako==1.3.8",
    "markupsafe==3.0.2",
    "multidict==6.1.0",
    "onnxruntime>=1.21.0",
    "opencv-python>=4.11.0.86",
    "openpyxl==3.1.5",
    "pre-commit>=4.1.0",
    "propcache==0.2.1",
    "psutil>=7.0.0",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.7.0",
    "pygal==3.0.5",
    "pypdf2==3.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "six==1.17.0",
    "sqlalchemy==2.0.36",
    "todoist-api-python==2.1.7",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "tzlocal==5.2",
    "urllib3==2.2.3",
    "win32-setctime==1.2.0",
    "yarl==1.18.3",
    "zipp==3.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
